--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,9 @@ edition = "2021"
 
 [dependencies]
 axum = "0.5.16"
-diesel = "2.0.0"
+
+axum-login = { version = "0.2.0", features = ["sqlite"] }
+
+diesel = { version = "2.0.0", features = ["r2d2", "sqlite"] }
+
 tokio = { version = "1.21.1", features = ["macros", "rt-multi-thread"] }
